# cyrup-chat

./: Cargo.toml  Dioxus.toml
.cargo/: config.toml
.config/: nextest.toml
assets/: tailwind.css
assets/icons/: Icon.icns
docs/: GRAPH_MODELS.md  dioxus-desktop-integration.md  macos-notification-apis.md  oauth-credential-vault.md  oauth-setup.md  objc2-nsmenu-patterns.md
resources/: Info.plist
spec/: index.html
src/: helper.rs  icons.rs  lib.rs  loc.rs  main.rs  public_action.rs  status_mutation.rs
src/app/: context.rs  errors.rs  icons.rs  mod.rs  oauth.rs
src/app/reducer/: actions.rs  mod.rs  state.rs
src/app/views/: app_logic.rs  auth_components.rs  main_components.rs  mod.rs  more_view.rs  notifications_view.rs  rooms_view.rs  timeline_view.rs
src/auth/: embedded_vault.rs  google_config.rs  mod.rs  native_oauth.rs  providers.rs  vault.rs  vault_auth_manager.rs
src/auth/services/: mod.rs
src/behaviours/: change_textsize.rs  mod.rs
src/components/: background.rs  mod.rs  shader_background.rs
src/components/bookmarks/: mod.rs  view.rs
src/components/chat/: mention_input.rs  mod.rs  view.rs
src/components/component_stack/: components.rs  conversation.rs  mod.rs  providers.rs  stack_entry.rs  state.rs  types.rs
src/components/conversation/: conversation_helpers.rs  mod.rs  reducer.rs
src/components/loggedin/: mod.rs  view_simple.rs
src/components/login/: mod.rs  view_simple.rs
src/components/more/: mod.rs  reducer.rs  view.rs
src/components/post/: action.rs  mod.rs  state.rs
src/components/room/: chat_view.rs  create_dialog.rs  mod.rs
src/components/sidebar/: mod.rs  reducer.rs
src/components/status_timeline/: mod.rs  providers.rs  view.rs
src/components/summary_card/: mod.rs  view.rs
src/components/template_manager/: mod.rs  view.rs
src/config/: mod.rs
src/constants/: mod.rs  ui_text.rs
src/database/: bookmarks.rs  conversations.rs  messages.rs  migration.rs  migration_notes.md  mod.rs  reactions.rs  rooms.rs  schema.rs  templates.rs
src/environment/: mod.rs  types.rs
src/environment/menu/: builder.rs  display.rs  events.rs  interface.rs  mod.rs  structures.rs  types.rs
src/environment/native/: core.rs  file_handling.rs  mod.rs  model_clean.rs  platform.rs  toolbar.rs  window.rs
src/environment/storage/: conversations.rs  mod.rs  notifications.rs  post_ops.rs  timeline_ops.rs  types.rs
src/errors/: auth.rs  mod.rs  network.rs  ui.rs
src/i18n/: accessibility.rs  api.rs  core.rs  mod.rs  translations.rs
src/i18n/languages/: chinese.rs  english.rs  french.rs  german.rs  italian.rs  japanese.rs  korean.rs  mod.rs  portuguese.rs  russian.rs  spanish.rs
src/notifications/: backend.rs  content.rs  error.rs  macos_backend.rs  mod.rs  service.rs
src/services/: agent_chat.rs  mention_parser.rs  message_stream.rs  mod.rs  summarizer.rs
src/shaders/: background.wgsl
src/utils/: async_file_dialog.rs  datetime.rs  http_parser.rs  id_generator.rs  mod.rs  scope_manager.rs
src/utils/async_platform/: core.rs  cross_platform_impl.rs  macos_impl.rs  mod.rs  public_api.rs
src/utils/native_platform/: error.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/utils/platform_api/: desktop.rs  features.rs  mod.rs  types.rs  web.rs
src/view_model/: account.rs  agent.rs  conversation.rs  media.rs  message.rs  mod.rs  notification.rs  token_budget.rs  types.rs
src/view_model/status/: constructor.rs  conversion.rs  core.rs  mod.rs  (+2 more)
src/widgets/: buttons.rs  checkbox.rs  errors.rs  hideable_view.rs  labels.rs  mod.rs  segmented_control.rs  sidebar_text.rs  spinner.rs  splitview.rs  stacks.rs  textcontent.rs
src/windows/: image_window.rs  mod.rs  post_window.rs  preferences_window.rs  profile_window.rs
tests/unit/: mod.rs
(+151 files in other folders)
