[package]
name = "cyrup"
version = "0.1.0"
edition = "2024"
description = "CYRUP AI Chat Client"

[package.metadata.bundle]
name = "CYRUP Chat"
identifier = "ai.cyrup"
icon = ["icons/Icon.icns", "icons/icon-win-256.png", "icons/icon-win-32.png", "icons/icon-win-16.png"]
version = "0.2.0"
short_description = "AI Chat Client"
osx_minimum_system_version = "10.14"

[lib]
name = "cyrup"
crate-type = ["staticlib", "lib"]

[dependencies]
dioxus = { version = "0.7.0-rc.3", features = ["desktop"] }
dioxus-desktop = { version = "0.7.0-rc.3", features = ["transparent", "tokio_runtime"] }
dioxus-native = { version = "0.7.0-rc.3" }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.17", features = ["v4"] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
webbrowser = "1.0"
thiserror = "2.0.12"
http = "1.3.1"
async-trait = "0.1.88"
lazy_static = "1.5.0"
parking_lot = "0.12.4"
muda = "0.17.1"
megalodon = "1.0.3"
linkify = "0.10.0"
futures-util = "0.3.31"
kodegen_mcp_client = { path = "../kodegen/packages/mcp-client" }
kodegen_tools_claude_agent = { path = "../kodegen/packages/tools-claude-agent" }
rmcp = { version = "0.8.3" }
anyhow = "1.0"
dirs = "6.0"
url = "2.5"
id_tree = "1.8"
im = "15.1"
itertools = "0.14"
enumset = { version = "1.1.7", features = ["serde"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
debug_panic = "0.2"
numfmt = "1.2.0"
copypasta = "0.10"
objc2 = "0.6.3"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-user-notifications = "0.3"
block2 = "0.6"
image = "0.25"
cacao = { version = "0.4.0-beta2" }
flume = "0.11"
directories-next = "2.0"
window-vibrancy = "0.6"
base64 = "0.22"
rfd = "0.15"
html5gum = "0.8"
regex = "1.11.1"
async-task = "4.7.1"
async-executor = "1.13.2"
bincode = "2.0.1"
snap = "1.1.1"
winit = "0.30.12"
bytemuck = "1.23.2"
wgpu = "26.0"
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm"] }
html-escape = "0.2.13"
keyring = "3.6.3"
surrealdb = { version = "3.0.0-alpha.11", features = ["kv-surrealkv"] }
surrealdb-types = "3.0.0-alpha.11"
zeroize = "1.8.1"
obfstr = "0.4.4"
google-oauth = { path = "packages/google-oauth" }
github-oauth = { path = "packages/github-oauth" }

[dev-dependencies]
# Testing framework and utilities
tokio-test = "0.4"
wiremock = "0.6.4"
tempfile = "3.2"
proptest = "1.7"
criterion = { version = "0.7", features = ["html_reports"] }
mockall = "0.13.1"
serial_test = "3.2"

# Test data generation
fake = { version = "4.4", features = ["derive", "chrono", "uuid"] }
quickcheck = "1.0"
quickcheck_macros = "1.1"

# Coverage and profiling
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
debug = true

[profile.bench]
debug = true
lto = true
codegen-units = 1

[target.x86_64-unknown-linux-gnu.dependencies]
gdk4 = "0.10"
glib = "0.21"
gtk4 = "0.10"

[target.x86_64-pc-windows-msvc.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Ole", "Win32_UI_Controls", "Win32_Graphics_Gdi"] }

[target.aarch64-apple-darwin.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3"
objc2-core-data = "0.3"
objc2-foundation = "0.3"

[patch.crates-io]
dioxus = { path = "tmp/dioxus/packages/dioxus" }
dioxus-desktop = { path = "tmp/dioxus/packages/desktop" }
dioxus-core = { path = "tmp/dioxus/packages/core" }
dioxus-native = { path = "tmp/dioxus/packages/native" }
